--- a/TestTask/Views/Home/index.cshtml
+++ b/TestTask/Views/Home/index.cshtml
@@ -1,3 +1,7 @@
+﻿@{
+    ViewData["Title"] = "index";
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
 
-    <script src = "/js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 </head>
 <body>
     <div class="container d-flex justify-content-center align-items-center vh-100">
@@ -35,13 +39,34 @@
                 </div>
                 <div class="modal-body">
                     <p id="modalDate"></p>
-                    <ul id="event"></ul>
+                    <ul id="eventList"></ul>
                 </div>
                 <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" id="add" onclick="displayNewEventWindow()" data-dismiss="modal">Добавить</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="addNewEvent" tabindex="-1" role="dialog" aria-labelledby="addNewEvent" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="infoModalLabel">Добавить событие</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="insertBody">
+                    
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" id="add" onclick="createNewEvent()" data-dismiss="modal">Добавить</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
                 </div>
             </div>
         </div>
     </div>
 </body>
 </html>
+
