--- a/TestTask/Views/Home/index.cshtml
+++ b/TestTask/Views/Home/index.cshtml
@@ -23,7 +23,10 @@
     <script src="/js/scripts.js"></script>
 </head>
 <body>
-    <div class="container d-flex justify-content-center align-items-center vh-100">
+    <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
+        <div>
+            <button type="button" onclick="updateData()">Обновить данные с базы данных</button>
+        </div>
         <div id="calendar" class="w-75"></div>
     </div>
 
@@ -42,7 +45,7 @@
                     <ul id="eventList"></ul>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" id="add" onclick="displayNewEventWindow()" data-dismiss="modal">Добавить</button>
+                    <button type="button" class="btn btn-secondary" id="add" onclick="displayEditEventWindow(null)" data-dismiss="modal">Добавить</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
                 </div>
             </div>
@@ -63,6 +66,23 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" id="add" onclick="createNewEvent()" data-dismiss="modal">Добавить</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="editEvent" tabindex="-1" role="dialog" aria-labelledby="editEvent" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="infoModalLabel">Изменить событие</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="editBody">
+
+                </div>
+                <div class="modal-footer" id="modalFooterEditWindow">
                 </div>
             </div>
         </div>
